tests/baselines/reference/interfaceOnly(strict=true).errors.txt
interfaceOnly.ts(2,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
interfaceOnly.ts(3,5): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.


==== interfaceOnly.ts (2 errors) ====
    interface foo {
        foo();
        ~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        f2 (f: ()=> void);
        ~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
    }